# rustify

./: .gitignore  Cargo.toml  LICENSE  count_total_lines.rs  printname.rs  takeinput.rs  uptime.rs
awkk/: .gitignore  Cargo.toml
awkk/src/: main.rs  myfile.txt
base64/: Cargo.toml
base64/src/: main.rs
basics/: Cargo.toml
basics/src/: d2_ownerships.rs  d6.rs  main.rs
caty/: Cargo.toml
files/src/: main.rs  reading.rs
lambda/: Cargo.toml
lambda/src/: main.rs
pi/src/: main.rs
scp/: Cargo.toml
src/: d1.rs  d2.rs  main.rs
tests/src/: main.rs
xyzredirect/: Cargo.toml
xyzredirect/src/: main.rs
